[package]
name = "WebScraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.24"
select = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
async-std = "1.10"
regex = "1.10.3"
